fix: prevented text clipping in #loginbtn

--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -64,8 +64,8 @@ body{
   max-height: 50px;
   background-color: #6c757d;
   color: white;
-  font-weight: 500;
-  font-size: calc(0.8em + 1vw); /* Example scaling based on button size */
+  font-weight: 450;
+  font-size: calc(1em + 0.1vw); /* Example scaling based on button size */
   border-radius: 0 3px 3px 0;
   cursor: pointer;
   outline: none;
